2009-07-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Artem for NB#126898.

	* src/home/hd-render-manager.c: Ignore animation actors when
	considering visibility and stacking order.

2009-07-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Add a GConf setting to disable showing CallUI in portrait.
	Fixes: NB#128657

	* src/hildon-desktop-views.schemas:
	* src/launcher/hd-app-mgr.c: Also re-check conditions when the 1s
	delay has passed.

2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>

	Release 2.2.64

2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#128647 Desktop crashed when continuously tap the incoming
		  notification above a system modal dialog

	Maybe he hit it just in wrong time.

	* src/mb/hd-note.h
	* src/mb/hd-note.c (hd_note_clicked):
	  Be more robust and don't act if the client is gone.

2009-07-16  Aapo Kojo  <aapo.kojo@nokia.com>

        Release 2.2.63

2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-volume-profile.c:
	  Don't use deprecated functions from libprofile-dev.
	* debian/control:
	  Set libprofile-dev version.

2009-07-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120636 [REGU]Phone application is opened in the background
		  if tapped on missed call notification when flash message
		  is displayed

	Make incoming event previews insensitive if there's a sysmodal.

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_map_notify:
	    let the cmgr decide whether the note is clicked or not
	  hd_comp_mgr_setup_input_viewport:
	    for this grab the input area of incoming event notifs
	    unconditionally
	* src/mb/hd-note.h
	* src/mb/hd-note.c (hd_note_clicked):
	  make the decision here and if there's no sysmodals in sight...
	* src/util/hd-util.h
	* src/util/hd-util.c (hd_util_clicked):
	  ...synthetize a ButtonPress
	* src/home/hd-switcher.c (hd_switcher_notification_clicked):
	  which was factored out from here

2009-07-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>
